--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<body>
 		<p>
-		<img src="images/cookies.jpeg" class="kopfbereich" alt="cookies"/>
+		<img src="../images/cookies.jpeg" class="kopfbereich" alt="cookies"/>
 		<img src="images/greensmoothie.jpeg" class="kopfbereich" alt="smoothie"/>
 		<img src="images/salad.jpeg" class="kopfbereich" alt="salad"/>
 	</p>
