--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Isabel Brenner Food Blog</title>
-	<link rel="stylesheet" href="css/food.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>	
 	<header>
@@ -27,14 +27,14 @@
 	<body>
 		<p>
 		<img src="../images/cookies.jpeg" class="kopfbereich" alt="cookies"/>
-		<img src="images/greensmoothie.jpeg" class="kopfbereich" alt="smoothie"/>
-		<img src="images/salad.jpeg" class="kopfbereich" alt="salad"/>
+		<img src="../images/greensmoothie.jpeg" class="kopfbereich" alt="smoothie"/>
+		<img src="../images/salad.jpeg" class="kopfbereich" alt="salad"/>
 	</p>
 
 	<p> 
 		<section class="left">
 		<h2>Vegan Addictive Green Super Smoothi</h2>
-		<img src="images/greensmoothie.jpeg" class="seite" alt=smoothie/>
+		<img src="../images/greensmoothie.jpeg" class="seite" alt=smoothie/>
 		<p> Meh synth Schlitz, tempor duis single-origin coffee ea next level ethnic fingerstache fanny pack nostrud. Photo booth anim 8-bit hella, PBR 3 wolf moon beard Helvetica. Salvia esse nihil, flexitarian Truffaut synth art party deep v chillwave. Seitan High Life reprehenderit consectetur cupidatat kogi. Et leggings fanny pack, elit bespoke vinyl art party Pitchfork selfies master cleanse Kickstarter seitan retro. Drinking vinegar stumptown yr pop-up artisan sunt. Deep v cliche lomo biodiesel Neutra selfies. Shorts fixie consequat flexitarian four loko.
 
 		Exercitation photo booth stumptown tote bag Banksy, elit small batch freegan sed. Craft beer elit seitan exercitation, photo booth et 8-bit kale chips proident chillwave deep v laborum. Aliquip veniam delectus, Marfa eiusmod Pinterest in do umami readymade swag. Selfies iPhone Kickstarter, drinking vinegar jean
@@ -55,7 +55,7 @@
 
 		<section class="right">
 			<h2>ABOUT ME</h3>
-			<img src="images/me.jpeg" class="me" alt=me/>
+			<img src="../images/me.jpeg" class="me" alt=me/>
 			<p>My name is Isabel Brenner, I am a food lover. I am using this blog to share my passion with you.</p>
 
 
