--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul>
 				<li><a href=home.html>HOME</a></li>
-				<li><a href=recipes.html>RECIPES</a>
+				<li><a href=recipes.html>RECIPES<li></a>
 					<ul>
 						<li><a href="#">Starters</a></li>
 						<li><a href="#">Main</a></li>
@@ -24,20 +24,28 @@
 		</nav>
 	</header>
 
-	<body>
-		<p>
-		<img src="../images/cookies.jpeg" class="kopfbereich" alt="cookies"/>
-		<img src="../images/greensmoothie.jpeg" class="kopfbereich" alt="smoothie"/>
-		<img src="../images/salad.jpeg" class="kopfbereich" alt="salad"/>
-	</p>
+	<div class="row">
+		<div class="column">
+			<img src="../images/cookies.jpeg" class="kopfbereich" alt="cookies"/>
+		</div>
+		<div class="column">
+			<img src="../images/greensmoothie.jpeg" class="kopfbereich" alt="smoothie"/>
+		</div>
+		<div class="column">
+			<img src="../images/salad.jpeg" class="kopfbereich" alt="salad"/>
+		</div>
+	</div>
 
 	<p> 
 		<section class="left">
+			<div class="Hauptteil">
+				<div>
 		<h2>Vegan Addictive Green Super Smoothi</h2>
 		<img src="../images/greensmoothie.jpeg" class="seite" alt=smoothie/>
 		<p> Meh synth Schlitz, tempor duis single-origin coffee ea next level ethnic fingerstache fanny pack nostrud. Photo booth anim 8-bit hella, PBR 3 wolf moon beard Helvetica. Salvia esse nihil, flexitarian Truffaut synth art party deep v chillwave. Seitan High Life reprehenderit consectetur cupidatat kogi. Et leggings fanny pack, elit bespoke vinyl art party Pitchfork selfies master cleanse Kickstarter seitan retro. Drinking vinegar stumptown yr pop-up artisan sunt. Deep v cliche lomo biodiesel Neutra selfies. Shorts fixie consequat flexitarian four loko.
 
 		Exercitation photo booth stumptown tote bag Banksy, elit small batch freegan sed. Craft beer elit seitan exercitation, photo booth et 8-bit kale chips proident chillwave deep v laborum. Aliquip veniam delectus, Marfa eiusmod Pinterest in do umami readymade swag. Selfies iPhone Kickstarter, drinking vinegar jean
+		</section>
 	</p>
 
 	<div class="subscribe-box">
@@ -45,17 +53,19 @@
 		<p>Sign up and receive the latest tips via email.</p>
 
 <form action="action_page.php">
-  <div class="container">
-    <input type="email" placeholder="Your email address" name="email" required>
-    <input type="submit" value="Subscribe">
-</div>
-</div>
+ 	 <div class="container">
+   		<input type="email" class="email" placeholder="Your email address" name="email" required>
+    	<input type="submit" value="Subscribe">
+	</div>
+	</div>
 </form>
-
-
 		<section class="right">
-			<h2>ABOUT ME</h3>
+			<div>
+			<h2>ABOUT ME</h2>
 			<img src="../images/me.jpeg" class="me" alt=me/>
 			<p>My name is Isabel Brenner, I am a food lover. I am using this blog to share my passion with you.</p>
+	</div>
+
+</body>
 
 
