Make navi consistent

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				<li><a href=home.html>HOME</a></li>
 				<li><a href=recipes.html>RECIPES<li></a>
 					<ul>
-						<li><a href="#">Starters</a></li>
-						<li><a href="#">Main</a></li>
-						<li><a href="#">Desserts</a></li>
+						<li><a href="#">STARTERS</a></li>
+						<li><a href="#">MAIN</a></li>
+						<li><a href="#">DESSERTS</a></li>
 					</ul>
 				</li>
 				<li><a href=aboutme.html>ABOUT ME</a></li>
