--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<nav>
 			<ul>
 				<li><a href=home.html>HOME</a></li>
-				<li><a href=recipes.html>RECIPES<li></a>
+				<li><a href=recipes.html>RECIPES</a>
 					<ul>
-						<li><a href="#">STARTERS</a></li>
-						<li><a href="#">MAIN</a></li>
-						<li><a href="#">DESSERTS</a></li>
+						<li><a href="#">Starters</a></li>
+						<li><a href="#">Main</a></li>
+						<li><a href="#">Desserts</a></li>
 					</ul>
 				</li>
 				<li><a href=aboutme.html>ABOUT ME</a></li>
