--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
 		<section class="left">
 			<div class="Hauptteil">
 				<div>
-		<h2>Vegan Addictive Green Super Smoothi</h2>
-		<img src="../images/greensmoothie.jpeg" class="seite" alt=smoothie/>
-		<p> Meh synth Schlitz, tempor duis single-origin coffee ea next level ethnic fingerstache fanny pack nostrud. Photo booth anim 8-bit hella, PBR 3 wolf moon beard Helvetica. Salvia esse nihil, flexitarian Truffaut synth art party deep v chillwave. Seitan High Life reprehenderit consectetur cupidatat kogi. Et leggings fanny pack, elit bespoke vinyl art party Pitchfork selfies master cleanse Kickstarter seitan retro. Drinking vinegar stumptown yr pop-up artisan sunt. Deep v cliche lomo biodiesel Neutra selfies. Shorts fixie consequat flexitarian four loko.
-
-		Exercitation photo booth stumptown tote bag Banksy, elit small batch freegan sed. Craft beer elit seitan exercitation, photo booth et 8-bit kale chips proident chillwave deep v laborum. Aliquip veniam delectus, Marfa eiusmod Pinterest in do umami readymade swag. Selfies iPhone Kickstarter, drinking vinegar jean
+					<h2>Vegan Addictive Green Super Smoothie</h2>
+					<img src="../images/greensmoothie.jpeg" class="seite" alt=smoothie/>
+						<p> Meh synth Schlitz, tempor duis single-origin coffee ea next level ethnic fingerstache fanny pack nostrud. Photo booth anim 8-bit hella, PBR 3 wolf moon beard Helvetica. Salvia esse nihil, flexitarian Truffaut synth art party deep v chillwave. Seitan High Life reprehenderit consectetur cupidatat kogi. Et leggings fanny pack, elit bespoke vinyl art party Pitchfork selfies master cleanse Kickstarter seitan retro. Drinking vinegar stumptown yr pop-up artisan sunt. Deep v cliche lomo biodiesel Neutra selfies. Shorts fixie consequat flexitarian four loko.
+						Exercitation photo booth stumptown tote bag Banksy, elit small batch freegan sed. Craft beer elit seitan exercitation, photo booth et 8-bit kale chips proident chillwave deep v laborum. Aliquip veniam delectus, Marfa eiusmod Pinterest in do umami readymade swag. Selfies iPhone Kickstarter, drinking vinegar jean
 		</section>
 	</p>
 
 	<div class="subscribe-box">
 		<h4>NEVER MISS A RECIPE</h4>
-		<p>Sign up and receive the latest tips via email.</p>
+			<p>Sign up and receive the latest tips via email.</p>
 
-<form action="action_page.php">
- 	 <div class="container">
-   		<input type="email" class="email" placeholder="Your email address" name="email" required>
-    	<input type="submit" value="Subscribe">
-	</div>
-	</div>
-</form>
-		<section class="right">
-			<div>
+				<form action="action_page.php">
+ 	<div class="container">
+   					<input type="email" class="email" placeholder="Your email address" name="email" required>
+    				<input type="submit" value="Subscribe">
+				</div>
+			</div>
+		</form>
+	
+	<section class="right">
+		<div>
 			<h2>ABOUT ME</h2>
-			<img src="../images/me.jpeg" class="me" alt=me/>
-			<p>My name is Isabel Brenner, I am a food lover. I am using this blog to share my passion with you.</p>
-	</div>
+				<img src="../images/me.jpeg" class="me" alt=me/>
+					<p>My name is Isabel Brenner, I am a food lover. I am using this blog to share my passion with you.</p>
+		</div>
 
 </body>
 
