--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	<div id="wrapper">
+		<header id="header">
+			<div class="container"></div>
 	<header>
 
 		<h1>Colourful Paradise</h1>
