Anpassungen Social Widgets

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div id="wrapper">
 		<header id="header">
 			<div class="container"></div>
-	<header>
-
+			<div id="wrapper">
+	
+		<header>
 		<h1>Colourful Paradise</h1>
+		</header>
+
+		<div id="navigation" style>
 		<nav>
 			<ul>
 				<li><a href=home.html>HOME</a></li>
@@ -27,7 +30,6 @@
 				<li><a href=contactus.html>CONTACT US</a></li>
 			</ul>
 		</nav>
-	</header>
 
 
 	<div class="row">
@@ -259,23 +261,24 @@
 			</div>
 		</div>
 
-
-
-
-<!--Sektion rechts erst einmal ausblenden--
-	<section class="right">
-		<div>
-			<h2>ABOUT ME</h2>
-				<img src="../images/me.jpeg" class="me" alt=me/>
-					<p>My name is Isabel Brenner, I am a food lover. I am using this blog to share my passion with you.</p>
-		</div>
-
-		<div class="social-widget">
-			<a href="http://facebook.com/solopinedesign" target="_blank"></a>
-			<a href="http://twitter.com/solopiedesigns" target="_blank"></a>
-			<a href="https://www.instagram.com/solopine" target="_blank"></a>
-			<a href="http://plus.google.com/#" target="_blank"></a>
+		<div id="footer-social">
+				<a href="http://facebook.com/solopinedesigns" target="_blank">
+				<i class="fa fa-facebook"></i>
+				<span>Facebook</span>
+			</a>
+			<a href="http://twitter.com/solopiedesigns" target="_blank">
+				<i class="fa fa-twitter"></i>
+					<span>Twitter</span>
+			</a>
+			<a href="https://www.instagram.com/solopine" target="_blank">
+				<i class="fa fa-instagram"></i>
+					<span>Instagram</span>
+			</a>
+			<a href="http://youtube.com/#" target="_blank">
+				<i class="fa fa-youtube"></i>
+					<span>Youtube</span>
+			</a>
 			<a href="#" target="_blank"></a>
 		</div>
-
-</body>--->
+	</footer>
+</div>
