--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 	<div class="subscribe-box">
 		<div class="subscribe-box-inner">
-			<h4>NEVER MISS A RECIPE</h4>
+			<h4> <i class="far fa-envelope"></i>NEVER MISS A RECIPE!</h4>
 			<p>Sign up and receive the latest tips via email.</p>
 		</div>
 
@@ -374,20 +374,23 @@
 	
 	<div class="subscribe-box">
 		<div class="subscribe-box-inner">
-			<h4>NEVER MISS A RECIPE</h4>
+			<div class="subscribe-box-inner-seite"
+			<h4> <i class="far fa-envelope"></i>NEVER MISS A RECIPE!</h4>
 				<p>Sign up and receive the latest tips via email.</p>
 			</div>
+		</div>
 
 		<div class="subscribe-box-inner">
 			<form action="action_page.php">
+			<div class="subscribe-box-inner-seite">
  				<div class="container">
-   					<input type="email" class="email" placeholder="Your email address" name="email" required>
+   					<input type="email" class="email-seite" placeholder="Your email address" name="email" required>
     				<input type="submit" value="Subscribe" class="submit-button">
 				</div>
 			</form>
 		</div>
 	</div>
-
+	</div>
 	</div>
 </div>
 </div>
