--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 	<div class="subscribe-box">
 		<div class="subscribe-box-inner">
-			<h4> <i class="far fa-envelope"></i>NEVER MISS A RECIPE!</h4>
+			<h4> <i class="fal fa-envelope" aria-hidden="true"></i>NEVER MISS A RECIPE!</h4>
 			<p>Sign up and receive the latest tips via email.</p>
 		</div>
 
@@ -372,26 +372,29 @@
 			</div>
 		</div>
 	
-	<div class="subscribe-box">
-		<div class="subscribe-box-inner">
-			<div class="subscribe-box-inner-seite"
-			<h4> <i class="far fa-envelope"></i>NEVER MISS A RECIPE!</h4>
-				<p>Sign up and receive the latest tips via email.</p>
-			</div>
+
+
+		<div class="mc4wp-form-fields"><div class="subscribe-box">				
+  	  	<div class="subscribe-text">
+      		<h4>Never Miss a Recipe!</h4>
+      		<p>Sign up and receive the latest tips via email.</p>
+      	</div>
+
+    	<div class="subscribe-form">
+			 <input type="email" name="EMAIL" placeholder="Your email address" required="">
+      		<input type="submit" value="Subscribe">
+    	</div>
+
 		</div>
 
-		<div class="subscribe-box-inner">
-			<form action="action_page.php">
-			<div class="subscribe-box-inner-seite">
- 				<div class="container">
-   					<input type="email" class="email-seite" placeholder="Your email address" name="email" required>
-    				<input type="submit" value="Subscribe" class="submit-button">
-				</div>
-			</form>
+		<div style="display: none;">
+			<input type="text" name="_mc4wp_honeypot" value="" tabindex="-1" autocomplete="off">
 		</div>
-	</div>
-	</div>
-	</div>
+			<input type="hidden" name="_mc4wp_timestamp" value="1537274142">
+			<input type="hidden" name="_mc4wp_form_id" value="32">
+			<input type="hidden" name="_mc4wp_form_element_id" value="mc4wp-form-2">
+		</div>
+
 </div>
 </div>
 </div>
